--- a/archive/greedyMask.ipynb
+++ b/archive/greedyMask.ipynb
@@ -20727,11 +20727,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.18903134,  0.43192296,  1.00509673],\n",
+       "       [-0.15858567,  0.12351643,  0.88974841],\n",
+       "       [-1.52273113, -1.62752149, -0.49858558],\n",
+       "       [ 0.49228546,  1.0720821 , -1.39625956]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "accs="
+    "a=np.random.rand(4,3)\n",
+    "from scipy.stats import zscore\n",
+    "def normalize(X):\n",
+    "    _X=X.copy()\n",
+    "    _X = zscore(_X, axis=0)\n",
+    "    _X[np.isnan(_X)]=0\n",
+    "    return _X\n",
+    "a=normalize(a)\n",
+    "a"
    ]
   }
  ],
