--- a/archive/test classRegions.ipynb
+++ b/archive/test classRegions.ipynb
@@ -612,25 +612,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X.shape=(150, 2)\n",
-      "predict_proba=[[6.51335792e-16 4.95077314e-04 9.99504923e-01]]\n",
-      "[-20.77457363   6.58213611  14.19243752]\n"
+      "X.shape=(99, 2)\n",
+      "predict_proba=[[9.99610664e-01 3.89335873e-04]]\n",
+      "[-7.85067875]\n",
+      "[0.00038934]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([4.75321954e-10, 4.99654189e-01, 5.00345811e-01])"
+       "array([1.])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,8 +655,8 @@
     "iris = datasets.load_iris()\n",
     "X = iris.data[:, [2, 3]]\n",
     "y = iris.target  # 取species列，类别\n",
-    "# X = X[:99,:]\n",
-    "# y = y[:99]\n",
+    "X = X[:99,:]\n",
+    "y = y[:99]\n",
     "print(f\"X.shape={X.shape}\") \n",
     "\n",
     "# train_test_split方法分割数据集\n",
@@ -692,6 +693,7 @@
     "# 验证predict_proba工作原理\n",
     "Zz = np.dot(lr.coef_, X_test_std[0, :].T) + lr.intercept_\n",
     "print(Zz)\n",
+    "print(sigmoid(Zz))\n",
     "np.array(sigmoid(Zz)) / sum(np.array(sigmoid(Zz)))\n",
     "# Output:array([  2.05743774e-11,   6.31620264e-02,   9.36837974e-01])\n",
     "# 此结果就是预测实例点各类的概率"
@@ -699,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
