--- a/archive/Untitled21.ipynb
+++ b/archive/Untitled21.ipynb
@@ -604,7 +604,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1     True\n",
+       "2    False\n",
+       "3    False\n",
+       "4    False\n",
+       "5    False\n",
+       "6    False\n",
+       "7    False\n",
+       "8    False\n",
+       "9    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "a=pd.read_csv(\"/gpfs/milgram/project/turk-browne/projects/rtSynth_rt/subjects/sub002/adaptiveThreshold.csv\")\n",
+    "a['monetaryReward9']=1\n",
+    "(a['session']==2) & (a['run']==2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +684,7 @@
        "      <td>6.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -664,7 +697,7 @@
        "      <td>8.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -677,7 +710,7 @@
        "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -690,7 +723,7 @@
        "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -703,7 +736,7 @@
        "      <td>8.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -716,7 +749,7 @@
        "      <td>6.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -729,7 +762,7 @@
        "      <td>3.0</td>\n",
        "      <td>1080.0</td>\n",
        "      <td>721.0</td>\n",
-       "      <td>720.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1440.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -742,7 +775,7 @@
        "      <td>1.0</td>\n",
        "      <td>360.0</td>\n",
        "      <td>360.0</td>\n",
-       "      <td>1081.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>2160.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -755,7 +788,7 @@
        "      <td>3.0</td>\n",
        "      <td>721.0</td>\n",
        "      <td>1080.0</td>\n",
-       "      <td>1800.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>360.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -768,7 +801,7 @@
        "      <td>5.0</td>\n",
        "      <td>1799.0</td>\n",
        "      <td>360.0</td>\n",
-       "      <td>1440.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>361.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -789,26 +822,25 @@
        "9  sub002        2   10       0.70               10.0             5.0   \n",
        "\n",
        "   monetaryReward1  monetaryReward5  monetaryReward9  monetaryReward13  \n",
-       "0              NaN              NaN              NaN               NaN  \n",
-       "1              NaN              NaN              NaN               NaN  \n",
-       "2              NaN              NaN              NaN               NaN  \n",
-       "3              NaN              NaN              NaN               NaN  \n",
-       "4              NaN              NaN              NaN               NaN  \n",
-       "5              NaN              NaN              NaN               NaN  \n",
-       "6           1080.0            721.0            720.0            1440.0  \n",
-       "7            360.0            360.0           1081.0            2160.0  \n",
-       "8            721.0           1080.0           1800.0             360.0  \n",
-       "9           1799.0            360.0           1440.0             361.0  "
+       "0              NaN              NaN                1               NaN  \n",
+       "1              NaN              NaN                1               NaN  \n",
+       "2              NaN              NaN                1               NaN  \n",
+       "3              NaN              NaN                1               NaN  \n",
+       "4              NaN              NaN                1               NaN  \n",
+       "5              NaN              NaN                1               NaN  \n",
+       "6           1080.0            721.0                1            1440.0  \n",
+       "7            360.0            360.0                1            2160.0  \n",
+       "8            721.0           1080.0                1             360.0  \n",
+       "9           1799.0            360.0                1             361.0  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "pd.read_csv(\"/gpfs/milgram/project/turk-browne/projects/rtSynth_rt/subjects/sub002/adaptiveThreshold.csv\")"
+    "a"
    ]
   },
   {
