--- a/archive/test_adaptiveThreshold.ipynb
+++ b/archive/test_adaptiveThreshold.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "toml filename=/gpfs/milgram/project/turk-browne/projects/rtSynth_rt/projects/rtSynth_rt/conf/sub002.ses3.toml\n"
+      "toml filename=/gpfs/milgram/project/turk-browne/projects/rtSynth_rt/projects/rtSynth_rt/conf/sub002.ses4.toml\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3"
+       "4"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
     "\n",
     "\n",
     "argParser = argparse.ArgumentParser()\n",
-    "argParser.add_argument('--config', '-c', default='sub002.ses3.toml', type=str, help='experiment file (.json or .toml)')\n",
+    "argParser.add_argument('--config', '-c', default='sub002.ses4.toml', type=str, help='experiment file (.json or .toml)')\n",
     "argParser.add_argument('--skipPre', '-s', default=0, type=int, help='skip preprocess or not')\n",
     "argParser.add_argument('--skipGreedy', '-g', default=0, type=int, help='skip greedy or not')\n",
     "argParser.add_argument('--testRun', '-t', default=None, type=int, help='testRun, can be [None,1,2,3,4,5,6,7,8]')\n",
@@ -68,6 +68,26 @@
     "cfg = cfg_loading(args.config)\n",
     "os.chdir(\"/gpfs/milgram/project/turk-browne/projects/rtSynth_rt/\")\n",
     "cfg.session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/gpfs/milgram/project/realtime/DICOM/20210514.rtSynth_sub002.rtSynth_sub002_ses4//'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg.dicom_dir"
    ]
   },
   {
