use 0.6 for ses5 testing

--- a/view_adaptiveThreshold.ipynb
+++ b/view_adaptiveThreshold.ipynb
@@ -958,7 +958,7 @@
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1875,6 +1875,295 @@
     "a=pd.read_csv(\"/Users/kailong/Desktop/rtEnv/rtSynth_rt/subjects/sub002/ses4/feedback/sub002_10_history.csv\")\n",
     "a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TR_scanner</th>\n",
+       "      <th>morphParam</th>\n",
+       "      <th>states</th>\n",
+       "      <th>B_prob</th>\n",
+       "      <th>TR_milgram</th>\n",
+       "      <th>Run</th>\n",
+       "      <th>Sub</th>\n",
+       "      <th>eachTime</th>\n",
+       "      <th>image</th>\n",
+       "      <th>perfect_trials</th>\n",
+       "      <th>points</th>\n",
+       "      <th>successful_trials</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ITI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>sub002</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>/Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ITI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>sub002</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>/Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ITI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>sub002</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>/Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ITI</td>\n",
+       "      <td>0.510009</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>sub002</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>/Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.621265e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ITI</td>\n",
+       "      <td>0.587067</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>sub002</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>/Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.621265e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>169</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>ITI</td>\n",
+       "      <td>0.755342</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>sub002</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>/Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.621266e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>170</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>ITI</td>\n",
+       "      <td>0.876991</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>sub002</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>/Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.621266e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>171</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>ITI</td>\n",
+       "      <td>0.633834</td>\n",
+       "      <td>168.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>sub002</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>/Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.621266e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>172</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>ITI</td>\n",
+       "      <td>0.819717</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>sub002</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>/Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.621266e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>173</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>ITI</td>\n",
+       "      <td>0.472192</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>sub002</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>/Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.621266e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>173 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     TR_scanner  morphParam states    B_prob  TR_milgram   Run     Sub  \\\n",
+       "0             1         NaN    ITI       NaN         NaN  10.0  sub002   \n",
+       "1             2         NaN    ITI       NaN         NaN  10.0  sub002   \n",
+       "2             3         NaN    ITI       NaN         NaN  10.0  sub002   \n",
+       "3             4         NaN    ITI  0.510009         1.0  10.0  sub002   \n",
+       "4             5         NaN    ITI  0.587067         2.0  10.0  sub002   \n",
+       "..          ...         ...    ...       ...         ...   ...     ...   \n",
+       "168         169         1.0    ITI  0.755342       166.0  10.0  sub002   \n",
+       "169         170         1.0    ITI  0.876991       167.0  10.0  sub002   \n",
+       "170         171         1.0    ITI  0.633834       168.0  10.0  sub002   \n",
+       "171         172         1.0    ITI  0.819717       169.0  10.0  sub002   \n",
+       "172         173         1.0    ITI  0.472192       170.0  10.0  sub002   \n",
+       "\n",
+       "     eachTime                                              image  \\\n",
+       "0        0.05  /Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...   \n",
+       "1        0.05  /Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...   \n",
+       "2        0.05  /Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...   \n",
+       "3        0.05  /Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...   \n",
+       "4        0.05  /Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...   \n",
+       "..        ...                                                ...   \n",
+       "168      0.05  /Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...   \n",
+       "169      0.05  /Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...   \n",
+       "170      0.05  /Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...   \n",
+       "171      0.05  /Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...   \n",
+       "172      0.05  /Users/kailong/Desktop/rtEnv/rtSynth_rt/expScr...   \n",
+       "\n",
+       "     perfect_trials  points  successful_trials     timestamp  \n",
+       "0               0.0     0.0                0.0           NaN  \n",
+       "1               0.0     0.0                0.0           NaN  \n",
+       "2               0.0     0.0                0.0           NaN  \n",
+       "3               0.0     0.0                0.0  1.621265e+09  \n",
+       "4               0.0     0.0                0.0  1.621265e+09  \n",
+       "..              ...     ...                ...           ...  \n",
+       "168             1.0     0.0                4.0  1.621266e+09  \n",
+       "169             1.0     0.0                4.0  1.621266e+09  \n",
+       "170             1.0     0.0                4.0  1.621266e+09  \n",
+       "171             1.0     0.0                4.0  1.621266e+09  \n",
+       "172             1.0     0.0                4.0  1.621266e+09  \n",
+       "\n",
+       "[173 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history=pd.read_csv(\"/Users/kailong/Desktop/rtEnv/rtSynth_rt/subjects/sub002/ses4/feedback/sub002_10_history.csv\")\n",
+    "history\n",
+    "# history['successful_trials']\n",
+    "# [['TR','TR_milgram']]\n",
+    "# # [(a+1)==b for a,b in enumerate(list(history['TR_milgram']))]\n",
+    "# print(f\"{history[['TR','TR_milgram']].to_string(index=False)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
