--- a/expScripts/catPer/dataAnalysis.ipynb
+++ b/expScripts/catPer/dataAnalysis.ipynb
@@ -4834,9 +4834,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "69.37275762141793"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# _=np.empty((6,12))\n",
     "# _[:]=None\n",
@@ -4844,7 +4855,10 @@
     "#     for j in range(12):\n",
     "#         _[i][j]=y[i*6+j]\n",
     "# plt.plot(np.mean(_,axis=1))\n",
-    "# _\n"
+    "# _\n",
+    "import numpy as np\n",
+    "a=[495.11,425.48,306.67,501.70,454.51,368.39]\n",
+    "np.std(a)"
    ]
   }
  ],
